--- a/HW_ML_CHEG-Copy1.ipynb
+++ b/HW_ML_CHEG-Copy1.ipynb
@@ -16,7 +16,7 @@
     "    - Divide the data into k groups\n",
     "    - for each fold\n",
     "        - Learn an mlp neural network on the all data except the kth fold\n",
-    "        - Display the error and artiy plot compared to the kth fold\n",
+    "        - Display the error and partiy plot compared to the kth fold\n",
     "        \n",
     "What data is being used?\n",
     "    - The data is from a counter current heat exchanger\n",
