--- a/HW_ML_CHEG-Copy1.ipynb
+++ b/HW_ML_CHEG-Copy1.ipynb
@@ -241,7 +241,8 @@
     "        else:\n",
     "            TestingInput = InputData[int((i/k)*m):int(((i+1)/k)*m)]\n",
     "            TestingOutput = OutputData[int((i/k)*m):int(((i+1)/k)*m)]\n",
-    "            TrainingInput = InputData[0:int((i/k)*m)] + InputData[int(((i+1)/k)*m):]\n",
+    "            Fornow = InputData.tolist()\n",
+    "            TrainingInput = np.array(Fornow[0:int((i/k)*m)] + Fornow[int(((i+1)/k)*m):])\n",
     "            TrainingOutput = OutputData[0:int((i/k)*m)] + OutputData[int(((i+1)/k)*m):] \n",
     "\n",
     "        TestingOut.append(TestingOutput)\n",
