--- a/HW_ML_CHEG-Copy1.ipynb
+++ b/HW_ML_CHEG-Copy1.ipynb
@@ -16,7 +16,7 @@
     "    - Divide the data into k groups\n",
     "    - for each fold\n",
     "        - Learn an mlp neural network on the all data except the kth fold\n",
-    "        - Display the error and partiy plot compared to the kth fold\n",
+    "        - Display the error and parity plot compared to the kth fold\n",
     "        \n",
     "What data is being used?\n",
     "    - The data is from a counter current heat exchanger\n",
@@ -216,7 +216,7 @@
     "    SCALER = preprocessing.StandardScaler()\n",
     "    SCALER.fit(InputData)\n",
     "    InputData = SCALER.transform(InputData)\n",
-    "    if(k!=2 and k!=4 and k!= 8):\n",
+    "    if(k!=2 and k!=4 and k!= 5):\n",
     "        print(\"Not a good fold number, try again\")\n",
     "        return\n",
     "    if(n<1 or n>100 or n %1 != 0):\n",
